<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/cleaningservice"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_calendar"
            android:title="@string/book_service" />

        <!-- New Booking History Item -->
        <item
            android:id="@+id/nav_booking_history"
            android:icon="@drawable/ic_history"
            android:title="@string/booking_history" />

        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_broom"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_vector"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>